# breakout-trust-onboard

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README-Setup.md  README-cross.md  README.md  ci-script-travis.sh  ci-testscript.sh  convert_certs.sh
bundles/: 2ab9fafe.0  2afadf98.0  2be02dd1.0  444fadc0.0  562446ce.0  65a79f3a.0  8997d620.0  README.md  Twilio_Trust_Onboard_G1.pem  Twilio_Trust_Onboard_G1_Available_Issuer.pem  Twilio_Trust_Onboard_G1_Available_Policy.pem  Twilio_Trust_Onboard_G1_Signing_Issuer.pem  Twilio_Trust_Onboard_G1_Signing_Policy.pem  Twilio_Trust_Onboard_G2.pem  Twilio_Trust_Onboard_G2_Signing.pem  c0c0d8ea.0  programmable-wireless.available.pem  programmable-wireless.signing.pem
bundles/G2/: Twilio_Trust_Onboard_G2_Available.pem
cloud-support/azure-iot/: README.md
cloud-support/azure-iot/azure-iot-sdk-c/: base64.c  custom_hsm_twilio.cpp  custom_hsm_twilio.h
cloud-support/azure-iot/python_tob_helper/: CMakeLists.txt  README.md  python_tob_helper.c
cloud-support/azure-iot/sample/: CMakeLists.txt  README.md  hello_register.c  helpers.cmake
cloud-support/azure-iot/samples/c/ll_client/: CMakeLists.txt  ll_client.c
cloud-support/azure-iot/samples/c/rpi_temp_monitor/: CMakeLists.txt  rpi_temp_monitor.c
cloud-support/azure-iot/samples/python/: twilio_trust_onboard_azure.py
cloud-support/custom/: README.md
cloud-support/custom/client/: CMakeLists.txt  client_sample.cpp  test_engine_acm.conf  test_engine_pcsc.conf
cloud-support/custom/client-mbedtls/: CMakeLists.txt  client_sample.cpp
cloud-support/custom/client-openssl/: client_sample.cpp  test_engine_pcsc.conf
cloud-support/custom/client-wolfssl/: CMakeLists.txt  client_sample.cpp
cloud-support/custom/paho-openssl/: README.md  client_sample.cpp  test_engine_acm.conf
cloud-support/custom/paho-openssl/linuxToB/: MQTTLinuxToB.h
cloud-support/custom/server/: gencreds.sh  server_sample.py
cmake_modules/: FindNlohmannJson.cmake  FindPCSC.cmake  FindWolfSSL.cmake
device-support/Seeed-LTE_Cat_1_Pi_HAT/: CMakeLists.txt  expansion-header-uart.sh  install_service.sh  startup.py  startup.sh  toolchain.cmake
device-support/Seeed-LTE_Cat_1_Pi_HAT/debian/: postinst
device-support/Seeed-LTE_Cat_1_Pi_HAT/service/: install_service.sh  seeed_lte_hat.py  seeed_lte_hat.service  twilio_ppp.service
external_libs/gemalto/common/inc/: Applet.h  MF.h  MIAS.h  NetInterface.h  SEInterface.h
external_libs/gemalto/common/src/: Applet.cpp  MF.cpp  MIAS.cpp  NetInterface.cpp  SEInterface.cpp
external_libs/gemalto/platform/concept_board/inc/: CinterionModem.h  LSerial.h  Serial.h
external_libs/gemalto/platform/concept_board/src/: CinterionModem.cpp  LSerial.cpp
external_libs/gemalto/platform/generic_module/inc/: ATInterface.h  GenericModem.h  LSerial.h  Serial.h
external_libs/gemalto/platform/generic_module/src/: ATInterface.cpp  GenericModem.cpp  LSerial.cpp
external_libs/tob_sim/: README.md
external_libs/tob_sim/common/inc/: Applet.h  ISO7816.h  MF.h  MIAS.h  NetInterface.h  SEInterface.h  base64.h
external_libs/tob_sim/common/src/: Applet.cpp  MF.cpp  MIAS.cpp  NetInterface.cpp  SEInterface.cpp  base64.c
external_libs/tob_sim/platform/generic_modem/inc/: ATInterface.h  GenericModem.h  LSerial.h  Serial.h
external_libs/tob_sim/platform/generic_modem/src/: ATInterface.cpp  GenericModem.cpp  LSerial.cpp  Serial.cpp
external_libs/tob_sim/platform/pcsc/inc/: Pcsc.h
external_libs/tob_sim/platform/pcsc/src/: Pcsc.cpp
include/: BreakoutTrustOnboardSDK.h  TobMbedtls.h  TobMbedtlsLL.h  breakout_tob.h
samples/azure-iot/: README.md
samples/azure-iot/c/ll_client/: CMakeLists.txt  ll_client.c
samples/azure-iot/c/rpi_temp_monitor/: CMakeLists.txt  rpi_temp_monitor.c
samples/azure-iot/python/: twilio_trust_onboard_azure.py
samples/standalone/: README.md
samples/standalone/client-mbedtls/: CMakeLists.txt
samples/standalone/client-openssl/: CMakeLists.txt  client_sample.cpp
samples/standalone/client-wolfssl/: CMakeLists.txt
samples/standalone/paho-openssl/: CMakeLists.txt  README.md  client_sample.cpp
samples/standalone/paho-openssl/linuxToB/: MQTTLinuxToB.h
samples/standalone/server/: gencreds.sh
service-scripts/: create_bundle.sh  doxygen.conf  format.sh
service-scripts/bundle_files/etc/: dhcpcd.conf  locale.gen  smsd.conf  udhcpd.conf
service-scripts/bundle_files/etc/default/: keyboard  locale
service-scripts/bundle_files/etc/network/: interfaces
service-scripts/bundle_files/home/pi/: sms_received.sh
src/: BreakoutTrustOnboardSDK.cpp  TobAzureHsm.cpp  TobMbedtls.cpp  TobMbedtlsLL.cpp  breakout_tob.cpp
tests/: BreakoutTrustOnboardLLTests.cpp  BreakoutTrustOnboardSDKTests.cpp  CMakeLists.txt  modems.csv  test_runner.md  test_runner.py  tls_lib_test.sh
tests/scripts/: build-deb.sh  ci-script-travis.sh  hedwig-dispatcher.py
tls-conf/: acm.cnf  pcsc.cnf
tools/: AzureDpsRegisterer.c  AzureDpsRegisterer.cpp  OpenSSLEngine.cpp  TobMbedtls.cpp  TobMbedtls.h  TrustOnboardTool.cpp  config.h  trust_on_board_tool.cpp
